err5.txt
    Checking auth-framework v0.5.0-rc18 (C:\Users\cires\OneDrive\Documents\projects\AuthFramework)
error[E0425]: cannot find type `PermissionUsageStats` in module `crate::analytics::reports`
   --> src\analytics\mod.rs:388:48
    |
388 |     ) -> Result<Vec<crate::analytics::reports::PermissionUsageStats>, AnalyticsError> {
    |                                                ^^^^^^^^^^^^^^^^^^^^ not found in `crate::analytics::reports`

error[E0061]: this method takes 1 argument but 2 arguments were supplied
   --> src\analytics\mod.rs:453:14
    |
453 |             .get_role_usage_stats(None, Some(time_range.clone()))
    |              ^^^^^^^^^^^^^^^^^^^^       ------------------------ unexpected argument #2 of type `std::option::Option<analytics::TimeRange>`
    |
note: method defined here
   --> src\analytics\mod.rs:347:14
    |
347 | pub async fn get_role_usage_stats(
    |              ^^^^^^^^^^^^^^^^^^^^
help: remove the extra argument
    |
453 -             .get_role_usage_stats(None, Some(time_range.clone()))
453 +             .get_role_usage_stats(None)
    |

warning: unused variable: `prefix`
  --> src\storage\core.rs:91:34
   |
91 |     async fn list_kv_keys(&self, prefix: &str) -> Result<Vec<String>> { Ok(Vec::new()) }
   |                                  ^^^^^^ help: if this is intentional, prefix it with an underscore: `_prefix`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `storage`
   --> src\analytics\dashboard.rs:274:41
    |
274 |     pub fn new(config: DashboardConfig, storage: Arc<dyn AuthStorage>) -> Self {
    |                                         ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_storage`

Some errors have detailed explanations: E0061, E0425.
For more information about an error, try `rustc --explain E0061`.
warning: `auth-framework` (lib) generated 2 warnings
error: could not compile `auth-framework` (lib) due to 2 previous errors; 2 warnings emitted
